fix some size and spacing

--- a/assets/less/sugar/core/type.less
+++ b/assets/less/sugar/core/type.less
@@ -27,9 +27,9 @@ blockquote {
     .margin(0, 0, @base-line-height);
     
     p {
-        .font-size(ceil(@base-font-size * 1.111)); // ~20px
+        .font-size(@base-font-size);
         font-weight: normal;
-        line-height: 1.55;
+        .line-height(@base-line-height);
 
         .margin-bottom(@base-font-size * .4);
     }
