--- a/assets/less/tools/atoms/inline-forms.less
+++ b/assets/less/tools/atoms/inline-forms.less
@@ -22,9 +22,7 @@
             vertical-align: middle;
             // ** Layout ** \\
             display: inline-block;
-            //margin-bottom: 0;
-            .margin-left(@eighth-spacing-unit);
-            .margin-right(@eighth-spacing-unit);
+            margin-bottom: 0;
 
             &:first-child { margin-left: 0; }
         }
@@ -44,7 +42,5 @@
             margin-left: 0;
             top: 0;
         }
-
-        .btn { .margin((@half-spacing-unit*-1), @eighth-spacing-unit, 0); }
     }
 }
